Fix background for plannings overlapping holidays

--- a/app/assets/stylesheets/components/_plannings.scss
+++ b/app/assets/stylesheets/components/_plannings.scss
@@ -392,7 +392,7 @@ body.plannings {
 
 .day {
   &.-definitive, &.-provisional {
-    &.-absence {
+    &.-absence, &.-holiday {
       &, &.-selected {
         background-clip: content-box, border-box;
       }
